2004-09-10  Richard Williamson   <rjw@apple.com>

        Fixed <rdar://problem/3782533> CrashTracer: .1459 crashes at com.apple.WebKit: -[WebTextRenderer initWithFont:usingPrinterFont:] + 0x138

        We were explicitly failing when we encountered deprecated fonts.
        (Those with unsupported glyph packings).
        Deprecated fonts should only appear on a system that have 
        stuff migrated from OS 9.  Ugh, thats probably why we've never seen
        the problem here.
        
        Reviewed by John.

        * WebCoreSupport.subproj/WebTextRenderer.m:
        (-[WebTextRenderer initWithFont:usingPrinterFont:]):

2004-09-10  John Sullivan  <sullivan@apple.com>

        Reviewed by Chris.
        
        - added _isFrameSet as a private method, so it can be used in WebBrowser.
        This is needed to merge the fix for 3123987 to SUPanNavy.

        * WebView.subproj/WebFrame.m:
        (-[WebFrame _isFrameSet]):
        new method
        
        * WebView.subproj/WebFramePrivate.h:
        declare new method

2004-09-10  Chris Blumenberg  <cblu@apple.com>

	Fixed previous "Reviewed by" line.

        * ChangeLog:

2004-09-09  Chris Blumenberg  <cblu@apple.com>

	Support for: <rdar://problem/3795485> debug menu item to enable RSS animation on first layout

        Reviewed by rjw.

        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge didFirstLayout]): new
        * WebView.subproj/WebDefaultFrameLoadDelegate.m:
        (-[WebDefaultFrameLoadDelegate webView:didFirstLayoutInFrame:]): new
        * WebView.subproj/WebViewPrivate.h:

2004-09-09  Richard Williamson   <rjw@apple.com>

        Alternate implementation of image rendering.  Use CGImageRefs instead
        of NSImages.
        
        Mostly works, but currently disabled because of issues w/ CG.
        
        Reviewed by Chris.

        * ChangeLog:
        * WebCoreSupport.subproj/WebImageData.h: Added.
        * WebCoreSupport.subproj/WebImageData.m: Added.